--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <script type="module">
 	import { render, html, useState, useEffect } from '!/htm/preact/standalone'
 	import useLocalStorage from './lib/use-local-storage.js'
+	import { z } from '!/zod@3.18'
+
+	const StateSchema = z.object({
+		count: z.number()
+	})
 
 	function App() {
-		const [count, setCount] = useLocalStorage('count', 13.7)
+		const [count, setCount] = useLocalStorage('count', StateSchema, {count: 13.7})
 
 		return html`
-			<button onClick=${() => setCount(c => c + 1)}>${count.toString()}</button>
+			<button onClick=${() => setCount(c => ({ count: c.count + 1 }))}>${count.count}</button>
 		`
 	}
 
